--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: python
 python:
   - "2.7"
   - "3.6"
-  - "3.7"
-dist: xenial
+matrix:
+  include:
+    - python: “3.7”
+      dist: xenial
 # command to install dependencies
 cache:
   - pip
